add simple Ai for enemy